fix(footer): update margin-top to 20rem for improved spacing

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  margin-top: 15rem;
+  margin-top: 20rem;
   padding-bottom: 1.5rem;
 
   @media (width <= 640px) {
